// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer component loads and displays Answer component 1`] = `
<div
  className="answer"
>
  <p
    className="answerTitle"
  >
    We are selling it here without any markup from the middleman!
  </p>
  <div
    className="answerLinks"
  >
    <p>
      by 
      Seller
      , MONTH, DD, YEAR | Helpful? 
      <a>
        Yes
      </a>
       (
      4
      ) | 
      <a>
        Report
      </a>
    </p>
  </div>
</div>
`;

exports[`AnswerList component loads and displays AnswerList component 1`] = `
<div
  className="answers"
>
  <p>
    A: 
  </p>
  <div
    className="answerList"
  >
    <div
      className="answer"
    >
      <p
        className="answerTitle"
      >
        We are selling it here without any markup from the middleman!
      </p>
      <div
        className="answerLinks"
      >
        <p>
          by 
          Seller
          , MONTH, DD, YEAR | Helpful? 
          <a>
            Yes
          </a>
           (
          4
          ) | 
          <a>
            Report
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question component loads and displays Question component 1`] = `
<div
  className="question"
>
  <div
    className="questionTitle"
  >
    <p>
      Q: 
      Why is this product cheaper here than other sites?
    </p>
    <div
      className="questionLinks"
    >
      <p>
        Helpful? 
        <a>
          Yes
        </a>
         (
        4
        ) | 
        <a>
          Add Answer
        </a>
      </p>
    </div>
  </div>
  <div
    className="answers"
  >
    <p>
      A: 
    </p>
    <div
      className="answerList"
    >
      <div
        className="answer"
      >
        <p
          className="answerTitle"
        >
          We are selling it here without any markup from the middleman!
        </p>
        <div
          className="answerLinks"
        >
          <p>
            by 
            Seller
            , MONTH, DD, YEAR | Helpful? 
            <a>
              Yes
            </a>
             (
            4
            ) | 
            <a>
              Report
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Questions widget component loads and displays questions widget component 1`] = `
<div
  className="questionsWidget"
>
  <h6>
    QUESTIONS & ANSWERS
  </h6>
  <div>
    <input
      id="questionsSearchBar"
      onChange={[Function]}
      placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
      type="search"
    />
  </div>
  <div
    className="questionList"
  >
    <div
      className="question"
    >
      <div
        className="questionTitle"
      >
        <p>
          Q: 
          Why is this product cheaper here than other sites?
        </p>
        <div
          className="questionLinks"
        >
          <p>
            Helpful? 
            <a>
              Yes
            </a>
             (
            4
            ) | 
            <a>
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
        className="answers"
      >
        <p>
          A: 
        </p>
        <div
          className="answerList"
        >
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              We are selling it here without any markup from the middleman!
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                Seller
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                4
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="question"
    >
      <div
        className="questionTitle"
      >
        <p>
          Q: 
          How long does it last?
        </p>
        <div
          className="questionLinks"
        >
          <p>
            Helpful? 
            <a>
              Yes
            </a>
             (
            2
            ) | 
            <a>
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
        className="answers"
      >
        <p>
          A: 
        </p>
        <div
          className="answerList"
        >
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              Some of the seams started splitting the first time I wore it!
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                sillyguy
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                6
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              9 lives
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                iluvdogz
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                31
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="questionButtons"
  >
    <p>
      REPLACE WITH MOREQUESTIONS COMPONENT
    </p>
    <p>
      REPLACE WITH ADDQUESTIONS COMPONENT
    </p>
  </div>
</div>
`;

exports[`QuestionsList component loads and displays QuestionsList component 1`] = `null`;

exports[`SearchBar component loads and displays SearchBar component 1`] = `
<div>
  <input
    id="questionsSearchBar"
    placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
    type="search"
  />
</div>
`;
